fix: run déjà défini dans main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,102 +29,6 @@ jobs:
           node-version: '20'
       
       - name: Install docurausus package globally
-        run: npx create-docusaurus@latest my-website classic
-        run: npm run build
-      
-
-      - name: Generate HTML page with dad joke
-        run: |
-          JOKE=$(dad-jokes)
-          DATE=$(date)
-          mkdir -p pages-content
-          cat > pages-content/index.html << EOF
-          <!DOCTYPE html>
-          <html lang="fr">
-          <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <title>Dad Jokes - GitHub Actions</title>
-              <style>
-                  body {
-                      font-family: Arial, sans-serif;
-                      max-width: 800px;
-                      margin: 50px auto;
-                      padding: 20px;
-                      text-align: center;
-                      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                      color: white;
-                      min-height: 100vh;
-                  }
-                  .container {
-                      background: rgba(255, 255, 255, 0.1);
-                      border-radius: 20px;
-                      padding: 40px;
-                      backdrop-filter: blur(10px);
-                      border: 1px solid rgba(255, 255, 255, 0.2);
-                  }
-                  h1 {
-                      color: #fff;
-                      margin-bottom: 30px;
-                  }
-                  .joke {
-                      font-size: 1.5em;
-                      margin: 30px 0;
-                      padding: 20px;
-                      background: rgba(255, 255, 255, 0.2);
-                      border-radius: 10px;
-                      line-height: 1.6;
-                  }
-                  .timestamp {
-                      font-size: 0.9em;
-                      opacity: 0.8;
-                      margin-top: 20px;
-                  }
-              </style>
-          </head>
-          <body>
-              <div class="container">
-                  <h1>🎭 Dad Joke of the Day</h1>
-                  <div class="joke">$JOKE</div>
-                  <div class="timestamp">Généré le: $DATE</div>
-                  <p><em>Déployé automatiquement avec GitHub Actions</em></p>
-              </div>
-          </body>
-          </html>
-          EOF
-          cat pages-content/index.html
-
-      - name: Upload pages artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages-content
-          path: pages-content/
-
- # deploy-dad-jokes-page:
- #   runs-on: ubuntu-latest
- #   needs: install-nodejs-and-dad-jokes
- #   permissions:
- #     contents: read
- ##     pages: write
-  #    id-token: write
-  #  environment:
-  #    name: github-pages
-  #    url: ${{ steps.deployment.outputs.page_url }}
-  #  steps:
-  #    - name: Download pages artifact
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: github-pages-content
-  #        path: ./pages-content
-  #    
-  #    - name: Setup Pages
-  #      uses: actions/configure-pages@v4
-  #      
-  #    - name: Upload artifact for Pages
-  #      uses: actions/upload-pages-artifact@v3
-   #     with:
-   #       path: './pages-content'
-   #       
-   #   - name: Deploy to GitHub Pages
-   #     id: deployment
-   #     uses: actions/deploy-pages@v4
+        steps:
+          - run: npx create-docusaurus@latest my-website classic
+          - run: npm run build
