--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  mydocusaurus-job:
+  my-docusaurus-job:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,4 +32,6 @@ jobs:
       
       - name: Install docurausus package globally      
         run: npx create-docusaurus@latest my-website classic
-      - run: npm run build
+      
+      - name: Build Docusaurus
+        run: npm run build
