--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,7 +31,7 @@ jobs:
           node-version: '20'
       
       - name: Install docurausus package globally      
-        run: npx create-docusaurus@latest my-website classic
+        run: npx create-docusaurus@latest docusaurus classic
       
       - name: Build Docusaurus
         run: npm run build
