--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         with:
           node-version: '20'
       
-      - name: Install docurausus package globally      
-        run: npx create-docusaurus@latest docusaurus classic
-      
+      - name: Install dependencies
+        run: npm ci
+
       - name: Build Docusaurus
         run: npm run build
