--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Build Docusaurus
         run: npm run build
-
+    page-html-docusaurus:
       - name: Generate HTML page with docusaurus
         run: |
           mkdir -p pages-content
@@ -113,7 +113,7 @@ jobs:
 
   deploy-docusaurus-page:
     runs-on: ubuntu-latest
-    #needs: install-nodejs-and-docusaurus
+    needs: page-html-docusaurus
     permissions:
       contents: read
       pages: write
